# WebScrapper

./: .gitignore  Modelfile.kozlov-tools  PROGRESS_EVALUATION.md  README.md  SUCCESS_SUMMARY.md  SYSTEM_STATUS.md  TECHNICAL_GUIDE.md  VIKTOR_INTELLIGENCE_README.md  dump.rdb  emo_progress.py  evaluate_system.sh  index.html  kozlov-direct-tools.py  kozlov-enhanced.sh  kozlov-integration.sh  kozlov-intelligence.py  launch-viktor.sh  ollama-function-bridge.py  ollama-tool-server-backup.py  ollama-tool-server-new.py  package-lock.json  package.json  progress_config.json  progress_evaluator.py  progress_report.json  recent_progress.json  setup-kozlov-direct.sh  setup-viktor.sh  viktor-client.py  viktor-demo.py  viktor-intelligence-agent.py  viktor-tools-api.py
BOB/: BOB.html
EVEMap/: build-universe-cache.py  dump.rdb  eve-api-client.js  eve-map-styles.css  eve-region-detail-layout-engine.js  eve-region-detail-layout.js  eve-region-layout.js  eve_2d_prototype.html  eve_3d_prototype.html  eve_api_service.py  package.json  universe_static_cache.json
EVEMap/eve-market-comparison/: CATEGORY-FILTERING-RESOLUTION.md  DEBUG-FIXES-COMPLETE.md  DEBUG-RESOLUTION-SUCCESS.md  DEPLOYMENT-READY-CHECKLIST.md  EXCLUDED-CATEGORIES-ARCHITECTURE.md  EXCLUDED-CATEGORIES-COMPLETE.md  EXCLUDED-CATEGORIES-DOCUMENTATION.md  FINAL-FIXES-VERIFICATION-REPORT.md  FIX-VERIFICATION-REPORT.md  GROUP-FILTERING-COMPLETE.md  OPTIMIZATION-COMPLETE.md  PAGE-LIMIT-FIX-DOCUMENTATION.md  QUICK-REFERENCE.md  README.md  comprehensive-category-test.js  debug-category-filtering.js  dump.rdb  package-lock.json  package.json  test-excluded-categories.js  test-excluded-categories.md  test-groups-api.js  test-page-limit-fix.html  test-with-real-data.js  verify-fix.js  verify-page-limit-fix.js
GimmeDaTools/: Batch_to_ScanV2.5.py  Batch_to_ScanV3_Experimental.py  Heidenhain 640 M5 SS.bat  download-all-machines.bat  nc-tool-analyzer.html  nc_tool_analyzer_gui.py  results.txt  sample_nc_file.h
GimmeDaTools/MLPS/: ENHANCED_SCHEDULER_IMPLEMENTATION.md  JMS_TROUBLESHOOTING.md  MATERIAL_REMOVAL_RATE_PLAN.md  README.md  TAB_MANAGEMENT_README.md  activity_types.json  config.json  debug_jms_config.py  debug_modules.py  install_dependencies.py  machine_bookings.json  machine_database.json  main.py  scheduler_jobs.json  scheduler_locks.json  scheduler_parts.json  test_enhanced_scheduler.py  test_jms_config_update.py  test_jms_modules.py  test_sample.nc  workpiece_priorities.json
GimmeDaTools/refactored_nc_tool_analyzer/: README.md  application_core.py  config.json  force_enable_jms.py  machine_database.json  main.py  scheduler_jobs.json  scheduler_parts.json  test_requests.py
MachineBooking/: MachineBooking.html
Machinist Game/: machinist_game.html
NC Parser/: QUICK_START.md  README.md  benchmark.py  demo.py  main.py  requirements.txt  run_tests.bat  setup.py  test_basic.py
NotebookAI/: DOCKER_SETUP.md  README.md  docker-compose.yml  start.sh
STEPViewer/: CMakeLists.txt  CMakeLists_emscripten.cmake  CMakeLists_emscripten.txt  STEP Handler.ccp  StepViewerInterface.html  build_web.sh  package-lock.json  package.json  step_viewer.js  step_viewer.wasm  test.step
STEPViewer/build_web/: CMakeCache.txt  Makefile  cmake_install.cmake  step_viewer.js  step_viewer.wasm
STEPViewer/src/: base64.h  main.cpp  main_web.cpp
WebScraper/: .env  69a2bf39-2a5a-4cbe-b9b1-7f2d60f87b1e.txt  CleanTags.py  ExtractChinese.py  README-MCP.md  TodaysChanges.txt  TodaysChanges_clean.txt  WebContent.py  bluesky_scraper.py  cli_interface.py  config.json  eagle-watchtower-mcp.js  gitignore  mcp-config.json  news_dashboard.css  news_dashboard.html  news_dashboard.js  nws_weather_service.py  package-lock.json  package-mcp.json  package.json  page.txt  reddit_scraper.py  server.js  simple_gemma_summarizer.py  simple_news_summarizer.py  summarizer.py  test_input.json  truthsocial_scraper.py  web_scraper.py  website_data.db
machinist-runner-game/: README.md  check-game-status.sh  jest.config.js  package-lock.json  package.json  server.js  test-api.js
(+207 files in other folders)
